--- a/syntaxhighlight.css
+++ b/syntaxhighlight.css
@@ -1,105 +1,211 @@
-* {
-  --hljs-bg: #f3f3f3;
-  --hljs-color: #24292f;
-  --hljs-punctuation-color: #24292faa;
+/* https://github.com/Yukaii/github-highlightjs-themes */
+/* MIT License */
+
+.hljs-comment,
+.hljs-punctuation {
+  color: #6a737d;
 }
 
-@media (prefers-color-scheme: dark) {
-  * {
-    --hljs-bg: #161b22;
-    --hljs-color: #c9d1d9;
-    --hljs-punctuation-color: #c9d1d9aa;
-  }
-}
-  pre code.hljs {
-  display: block;
-  overflow-x: auto;
-  padding: 1em
-}
-
-code.hljs {
-  padding: 3px 5px
-}
-
-.hljs {
-  background: var(--hljs-bg);
-  color: var(--hljs-color)
-}
-
-.hljs-comment {
-  color: #697070
-}
-
-.hljs-punctuation,
-.hljs-tag {
-  color: var(--hljs-punctuation-color)
-}
-
-.hljs-tag .hljs-attr,
-.hljs-tag .hljs-name {
-  color: var(--hljs-color)
-}
-
+.hljs-attr,
 .hljs-attribute,
-.hljs-doctag,
-.hljs-keyword,
-.hljs-meta .hljs-keyword,
-.hljs-name,
-.hljs-selector-tag {
-  font-weight: 700
-}
-
-.hljs-deletion,
-.hljs-number,
-.hljs-quote,
-.hljs-selector-class,
-.hljs-selector-id,
-.hljs-string,
-.hljs-template-tag,
-.hljs-type {
-  color: #800
-}
-
-.hljs-section,
-.hljs-title {
-  color: #800;
-  font-weight: 700
-}
-
-.hljs-link,
-.hljs-operator,
-.hljs-regexp,
+.hljs-meta,
 .hljs-selector-attr,
-.hljs-selector-pseudo,
-.hljs-symbol,
-.hljs-template-variable,
-.hljs-variable {
-  color: #ab5656
+.hljs-selector-class,
+.hljs-selector-id {
+  color: #005cc5;
 }
 
-.hljs-literal {
-  color: #695
+.hljs-variable,
+.hljs-literal,
+.hljs-number,
+.hljs-doctag {
+  color: #e36209;
 }
 
-.hljs-addition,
-.hljs-built_in,
-.hljs-bullet,
-.hljs-code {
-  color: #397300
+.hljs-params {
+  color: #24292e;
 }
 
-.hljs-meta {
-  color: #1f7199
+.hljs-function {
+  color: #6f42c1;
 }
 
-.hljs-meta .hljs-string {
-  color: #38a
+.hljs-class,
+.hljs-tag,
+.hljs-title,
+.hljs-built_in {
+  color: #22863a;
+}
+
+.hljs-keyword,
+.hljs-type,
+.hljs-builtin-name,
+.hljs-meta-keyword,
+.hljs-template-tag,
+.hljs-template-variable {
+  color: #d73a49;
+}
+
+.hljs-string,
+.hljs-undefined {
+  color: #032f62;
+}
+
+.hljs-regexp {
+  color: #032f62;
+}
+
+.hljs-symbol {
+  color: #005cc5;
+}
+
+.hljs-bullet {
+  color: #e36209;
+}
+
+.hljs-section {
+  color: #005cc5;
+  font-weight: bold;
+}
+
+.hljs-quote,
+.hljs-name,
+.hljs-selector-tag,
+.hljs-selector-pseudo {
+  color: #22863a;
 }
 
 .hljs-emphasis {
-  font-style: italic
+  color: #e36209;
+  font-style: italic;
 }
 
 .hljs-strong {
-  font-weight: 700
+  color: #e36209;
+  font-weight: bold;
+}
+
+.hljs-deletion {
+  color: #b31d28;
+  background-color: #ffeef0;
+}
+
+.hljs-addition {
+  color: #22863a;
+  background-color: #f0fff4;
+}
+
+.hljs-link {
+  color: #032f62;
+  font-style: underline;
+}
+
+@media (prefers-color-scheme: dark) {
+  .hljs {
+    display: block;
+    overflow-x: auto;
+    padding: 0.5em;
+  
+    color: #c9d1d9;
+    background: #0d1117;
+  }
+  
+  .hljs-comment,
+  .hljs-punctuation {
+    color: #8b949e;
+  }
+  
+  .hljs-attr,
+  .hljs-attribute,
+  .hljs-meta,
+  .hljs-selector-attr,
+  .hljs-selector-class,
+  .hljs-selector-id {
+    color: #79c0ff;
+  }
+  
+  .hljs-variable,
+  .hljs-literal,
+  .hljs-number,
+  .hljs-doctag {
+    color: #ffa657;
+  }
+  
+  .hljs-params {
+    color: #c9d1d9;
+  }
+  
+  .hljs-function {
+    color: #d2a8ff;
+  }
+  
+  .hljs-class,
+  .hljs-tag,
+  .hljs-title,
+  .hljs-built_in {
+    color: #7ee787;
+  }
+  
+  .hljs-keyword,
+  .hljs-type,
+  .hljs-builtin-name,
+  .hljs-meta-keyword,
+  .hljs-template-tag,
+  .hljs-template-variable {
+    color: #ff7b72;
+  }
+  
+  .hljs-string,
+  .hljs-undefined {
+    color: #a5d6ff;
+  }
+  
+  .hljs-regexp {
+    color: #a5d6ff;
+  }
+  
+  .hljs-symbol {
+    color: #79c0ff;
+  }
+  
+  .hljs-bullet {
+    color: #ffa657;
+  }
+  
+  .hljs-section {
+    color: #79c0ff;
+    font-weight: bold;
+  }
+  
+  .hljs-quote,
+  .hljs-name,
+  .hljs-selector-tag,
+  .hljs-selector-pseudo {
+    color: #7ee787;
+  }
+  
+  .hljs-emphasis {
+    color: #ffa657;
+    font-style: italic;
+  }
+  
+  .hljs-strong {
+    color: #ffa657;
+    font-weight: bold;
+  }
+  
+  .hljs-deletion {
+    color: #ffa198;
+    background-color: #490202;
+  }
+  
+  .hljs-addition {
+    color: #7ee787;
+    background-color: #04260f;
+  }
+  
+  .hljs-link {
+    color: #a5d6ff;
+    font-style: underline;
+  }
 }
