--- a/syntaxhighlight.css
+++ b/syntaxhighlight.css
@@ -1,6 +1,21 @@
 /* https://github.com/Yukaii/github-highlightjs-themes */
 /* MIT License */
 
+code {
+  font-family: 'Courier New', Courier, monospace;
+  background-color: var(--inline-code-color);
+  padding: 3px;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-radius: 5px;
+}
+
+pre>code {
+  display: block;
+  padding: 1em;
+  background: var(--code-color);
+}
+
 .hljs-comment,
 .hljs-punctuation {
   color: #6a737d;
@@ -101,14 +116,6 @@
 }
 
 @media (prefers-color-scheme: dark) {
-  .hljs {
-    display: block;
-    overflow-x: auto;
-    padding: 0.5em;
-  
-    color: #c9d1d9;
-    background: #0d1117;
-  }
   
   .hljs-comment,
   .hljs-punctuation {
