--- a/md.html.css
+++ b/md.html.css
@@ -28,7 +28,7 @@
 }
 
 code {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   background-color: var(--inline-code-color);
   padding: 3px;
   padding-left: 5px;
@@ -44,6 +44,8 @@ pre>code {
 }
 
 body {
+  box-sizing: border-box;
+  margin: 0;
   background-color: var(--main-bg-color);
 }
 
@@ -101,4 +103,65 @@ th {
   overflow: auto;
   font-size: 1em;
   line-height: 1.3;
+}
+
+#popup-overlay {
+  visibility: hidden;
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: grey;
+  opacity: 50%;
+}
+
+.popup-container {
+  visibility: hidden;
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  opacity: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.popup {
+  position: sticky;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 1rem 1rem 1rem;
+  border-radius: 10px;
+  margin-bottom: 5rem;
+  background: var(--main-bg-color);
+}
+
+.popup span {
+  position: absolute;
+  font-weight: 700;
+  right: 18px;
+  top: 15px;
+}
+
+.popup span:hover {
+  cursor: pointer;
+  color: var(--quote-text-color);
+}
+
+.buttons-container button {
+  font-size: 100%;
+  width: 10rem;
+  height: 30px;
+  background-color: var(--code-color);
+  border-radius: 5px;
+  border-color: var(--quote-line-color);
+}
+
+.buttons-container button:hover {
+  cursor: pointer;
+  background-color: var(--quote-text-color);
 }
