--- a/md.html.css
+++ b/md.html.css
@@ -113,24 +113,13 @@ th {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: grey;
-  opacity: 50%;
-}
-
-.popup-container {
-  visibility: hidden;
-  position: absolute;
-  height: 100vh;
-  width: 100%;
-  opacity: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  background-color: #80808099;
 }
 
 .popup {
-  position: sticky;
+  position: relative;
   display: flex;
+
   align-items: center;
   justify-content: center;
   flex-direction: column;
@@ -138,6 +127,7 @@ th {
   border-radius: 10px;
   margin-bottom: 5rem;
   background: var(--main-bg-color);
+  opacity: 100%;
 }
 
 .popup span {
